Resumo da Historia

--- a/Index.html
+++ b/Index.html
@@ -40,9 +40,7 @@
             <div class="imagem">
                 <div class="container">
                     <h2>Historia</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque minus dolor et rem? Dolor dolore
-                        laudantium illum libero numquam quam eaque commodi modi enim corporis, debitis, reprehenderit
-                        laborum. Eveniet, <a href="Quem-somos-nós.html"><b>Ver mais</b></a>
+                    <p>O São Paulo Futebol Clube foi fundado em 25 de janeiro de 1930 como São Paulo da Floresta. Após breve período de inatividade, foi refundado em 16 de dezembro de 1935 com o nome atual. É o único time brasileiro que tem três títulos continentais e três mundiais, além de ser o único a conquistar o Campeonato Brasileiro três vezes consecutivas. Duas das estrelas do emblema são-paulino, as douradas, têm relação com outro esporte. Elas representam os recordes mundiais e olímpicos de salto triplo de Adhemar Ferreira da Silva, atleta do clube. <a href="Quem-somos-nós.html"><b>Ver mais</b></a>
                 </div>
                 <img src="assets/Estadio-Antigo.png" alt="">
             </div>
@@ -84,12 +82,15 @@
         </div>
     </div>
     <div class="morumbi">
-            <div class="container1  ">
-                <h1>Estadio Cicero Pompeu de Toledo</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et voluptatum ipsum placeat voluptas non? Amet libero perferendis quibusdam cum alias temporibus ad odio dolorum, dignissimos maxime deleniti numquam doloribus quod.</p>
-                <img src="assets/mapa-atualizado-setores-do-morumbi-2022.png" alt="">
-
+        <div class="imagem">
+            <div class="container">
+                <h2>Estadio Cicero Pompeu de Toledo</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque minus dolor et rem? Dolor dolore
+                    laudantium illum libero numquam quam eaque commodi modi enim corporis, debitis, reprehenderit
+                    laborum. Eveniet,
             </div>
+            <img src="assets/mapa-atualizado-setores-do-morumbi-2022.png    " alt="">
+        </div>
     </div>
     <div class="footer">
         <div class="container">
