Inicio aba cadastro

--- a/web-data-viz/site/public/Index.html
+++ b/web-data-viz/site/public/Index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Estilos.css">
-
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="css/assets-css/icon-removebg-preview.png"
 </head>
 
 <body>
@@ -36,7 +36,7 @@
 
         <!-- we (sobre nós)-->
 
-        <div class="we">
+        <div class="historia">
             <div class="imagem">
                 <div class="container">
                     <h2>Historia</h2>
@@ -48,74 +48,83 @@
                         olímpicos de salto triplo de Adhemar Ferreira da Silva, atleta do clube. <a
                             href="Quem-somos-nós.html"><b>Ver mais</b></a>
                 </div>
-                <img src="assets/Estadio-Antigo.png" alt="">
+                <img src="assets/Estadio-Antigo.png"">
             </div>
         </div>
 
-        <div class="social">
-            <div class="container">
-                <div class="boxes">
-                    <h1>Principais Idolos</h1>
-                    <div class="box">
-                        <img src="assets/ceni.jpg" alt="Rogerio Ceni">
-                        <h4>Rogerio Ceni</h4>
-                        
-                        <select name="TitulosRC" id="select_titulosRC">
-                            <option value="">Principais Titulos</option> 
-                            <option value="">1993 Copa Libertadores da América.</option>
-                            <option value="">1993 Mundial Interclubes.</option>
-                            <option value="">2005 Copa Libertadores da América </option>
-                            <option value="">2005 Mundial Interclubes.</option>
-                            <option value="">2006 Campeonato Brasileiro</option>
-                            <option value="">2007 Campeonato Brasileiro</option>
-                            <option value="">2008 Campeonato Brasileiro</option>
-                        </select>
-                        <p>Revelado em 1990 pelo Sinop, do Mato Grosso, foi contratado no mesmo ano pelo São Paulo, equipe da qual foi titular de 1997 até 2015 e é considerado o maior e melhor jogador da história do clube, por ter conquistado praticamente todos os títulos possíveis, sendo em muitos deles decisivo. </p>
+        <div class=" idolos">
+                <div class="container">
+                    <div class="titulo">
+                        <h1>Principais Idolos</h1>
                     </div>
-                    <div class="box">
-                        <img src="assets/rai-01.jpg" alt="Rai">
-                        <h4>Rai</h4>
-                        <select name="titulosRai" id="select_titulosRai">
-                            <option value="">Principais Titulos</option>
-                            <option value="">1991 Campeonato Brasileiro</option>
-                            <option value="">1992 Copa Libertadores da América</option>
-                            <option value="">1992 Mundial Interclubes</option>
-                            <option value="">1993 Copa Libertadores da América</option>
-                        </select>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, aspernatur ex! Eos eum nostrum fuga omnis optio ex inventore numquam tempore distinctio? Soluta, maxime. Molestiae error dicta nisi? Explicabo, ea?</p>
-                    </div>
-                    <div class="box">
-                        <img src="assets/serginho-chulapa.jpg" alt="Serginho Chulapa">
-                        <h4>Serginho Chulapa</h4>
-                        <select name="titulosSC" id="select_titulosSC">
-                            <option value="">Principais Titulos</option>
-                            <option value="">1975 Campeonato Paulista</option>
-                            <option value="">1977 Campeonato Brasileiro</option>
-                            <option value="">1980 Campeonato Paulista</option>
-                            <option value="">1981 Campeonato Paulista</option>
-                        </select>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla obcaecati, veniam voluptate est illum neque in ex consequatur atque explicabo cum eius hic error, aliquid, commodi natus eligendi minima officia.</p>
+                    <div class="boxes">
+                        <div class="box">
+                            <img src="assets/ceni.jpg" alt="Rogerio Ceni">
+                            <h4>Rogerio Ceni</h4>
+
+                            <select name="TitulosRC" id="select_titulosRC">
+                                <option value="">Principais Titulos</option>
+                                <option value="">1993 Copa Libertadores da América.</option>
+                                <option value="">1993 Mundial Interclubes.</option>
+                                <option value="">2005 Copa Libertadores da América </option>
+                                <option value="">2005 Mundial Interclubes.</option>
+                                <option value="">2006 Campeonato Brasileiro</option>
+                                <option value="">2007 Campeonato Brasileiro</option>
+                                <option value="">2008 Campeonato Brasileiro</option>
+                            </select>
+                            <p>Revelado em 1990 pelo Sinop, do Mato Grosso, foi contratado no mesmo ano pelo São Paulo,
+                                equipe da qual foi titular de 1997 até 2015 e é considerado o maior e melhor jogador da
+                                história do clube, por ter conquistado praticamente todos os títulos possíveis, sendo em
+                                muitos deles decisivo. </p>
+                        </div>
+                        <div class="box">
+                            <img src="assets/rai-01.jpg" alt="Rai">
+                            <h4>Rai</h4>
+                            <select name="titulosRai" id="select_titulosRai">
+                                <option value="">Principais Titulos</option>
+                                <option value="">1991 Campeonato Brasileiro</option>
+                                <option value="">1992 Copa Libertadores da América</option>
+                                <option value="">1992 Mundial Interclubes</option>
+                                <option value="">1993 Copa Libertadores da América</option>
+                            </select>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, aspernatur ex! Eos eum
+                                nostrum fuga omnis optio ex inventore numquam tempore distinctio? Soluta, maxime.
+                                Molestiae error dicta nisi? Explicabo, ea?</p>
+                        </div>
+                        <div class="box">
+                            <img src="assets/serginho-chulapa.jpg" alt="Serginho Chulapa">
+                            <h4>Serginho Chulapa</h4>
+                            <select name="titulosSC" id="select_titulosSC">
+                                <option value="">Principais Titulos</option>
+                                <option value="">1975 Campeonato Paulista</option>
+                                <option value="">1977 Campeonato Brasileiro</option>
+                                <option value="">1980 Campeonato Paulista</option>
+                                <option value="">1981 Campeonato Paulista</option>
+                            </select>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla obcaecati, veniam
+                                voluptate est illum neque in ex consequatur atque explicabo cum eius hic error, aliquid,
+                                commodi natus eligendi minima officia.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="morumbi">
-        <div class="imagem">
-            <div class="container">
-                <h2>Estadio Cicero Pompeu de Toledo</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque minus dolor et rem? Dolor dolore
-                    laudantium illum libero numquam quam eaque commodi modi enim corporis, debitis, reprehenderit
-                    laborum. Eveniet,
+        <div class="morumbi">
+            <div class="imagem">
+                <div class="container">
+                    <h2>Estadio Cicero Pompeu de Toledo</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque minus dolor et rem? Dolor dolore
+                        laudantium illum libero numquam quam eaque commodi modi enim corporis, debitis, reprehenderit
+                        laborum. Eveniet,
+                </div>
+                <img src="assets/mapa-atualizado-setores-do-morumbi-2022.png    " alt="">
             </div>
-            <img src="assets/mapa-atualizado-setores-do-morumbi-2022.png    " alt="">
         </div>
-    </div>
-    <div class="footer">
-        <div class="container">
-            <h4>Feito com amor por um aluno &hearts; SPTech &copy; 2022</h4>
+        <div class="footer">
+            <div class="container">
+                <h4>Feito com amor por um aluno &hearts; SPTech &copy; 2022</h4>
+            </div>
         </div>
-    </div>
 
 
 
