Finalizei login e cadastro e iniciei quem somos nós

--- a/web-data-viz/site/public/Index.html
+++ b/web-data-viz/site/public/Index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="css/assets-css/icon-removebg-preview.png"
+    <link rel="icon" href="css/assets-css/icon-removebg-preview.png">
 </head>
 
 <body>
@@ -30,8 +30,8 @@
             </div>
         </div>
     </div>
-    </div>
-    </div>
+    
+    
     <div class="background">
 
         <!-- we (sobre nós)-->
