Iniciando quem somos nos

--- a/web-data-viz/site/public/Index.html
+++ b/web-data-viz/site/public/Index.html
@@ -48,7 +48,7 @@
                         olímpicos de salto triplo de Adhemar Ferreira da Silva, atleta do clube. <a
                             href="Quem-somos-nós.html"><b>Ver mais</b></a>
                 </div>
-                <img src="assets/Estadio-Antigo.png"">
+                <img src="assets/Estadio-Antigo.png">
             </div>
         </div>
 
@@ -75,7 +75,7 @@
                             <p>Revelado em 1990 pelo Sinop, do Mato Grosso, foi contratado no mesmo ano pelo São Paulo,
                                 equipe da qual foi titular de 1997 até 2015 e é considerado o maior e melhor jogador da
                                 história do clube, por ter conquistado praticamente todos os títulos possíveis, sendo em
-                                muitos deles decisivo. </p>
+                                muitos deles decisivo. <a href="Quem-somos-nós.html"><b>Ver mais</b></a> </p>
                         </div>
                         <div class="box">
                             <img src="assets/rai-01.jpg" alt="Rai">
@@ -87,9 +87,7 @@
                                 <option value="">1992 Mundial Interclubes</option>
                                 <option value="">1993 Copa Libertadores da América</option>
                             </select>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, aspernatur ex! Eos eum
-                                nostrum fuga omnis optio ex inventore numquam tempore distinctio? Soluta, maxime.
-                                Molestiae error dicta nisi? Explicabo, ea?</p>
+                            <p>Raí chegou ao São Paulo em 1987 e teve um começo instável: era chamado de lento e frequentemente ficava no banco de reservas. Só virou titular absoluto em 1989, ano da primeira conquista pelo clube, o Campeonato Paulista. Telê chegou no ano seguinte. <a href="Quem-somos-nós.html"><b>Ver mais</b></a> </p>        
                         </div>
                         <div class="box">
                             <img src="assets/serginho-chulapa.jpg" alt="Serginho Chulapa">
@@ -101,9 +99,7 @@
                                 <option value="">1980 Campeonato Paulista</option>
                                 <option value="">1981 Campeonato Paulista</option>
                             </select>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla obcaecati, veniam
-                                voluptate est illum neque in ex consequatur atque explicabo cum eius hic error, aliquid,
-                                commodi natus eligendi minima officia.</p>
+                            <p> Serginho Chulapa foi um dos principais atacantes da década de 1970 e 1980 do futebol brasileiro. Com 1,94m de altura, o jogador sempre chamou a atenção pelo seu estilo de jogo, do centroavante clássico, com muita presença de área e faro de gols. <a href="Quem-somos-nós.html"><b>Ver mais</b></a> </p>  
                         </div>
                     </div>
                 </div>
@@ -113,9 +109,7 @@
             <div class="imagem">
                 <div class="container">
                     <h2>Estadio Cicero Pompeu de Toledo</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque minus dolor et rem? Dolor dolore
-                        laudantium illum libero numquam quam eaque commodi modi enim corporis, debitis, reprehenderit
-                        laborum. Eveniet,
+                    <p>O Estádio Cícero Pompeu de Toledo, mais conhecido como Estádio do Morumbi, é um estádio construído para receber partidas de futebol, sendo a sede oficial do time brasileiro de futebol São Paulo Futebol Clube, já tendo recebido a Seleção Brasileira em várias ocasiões. O estádio foi projetado para acomodar 150 mil espectadores, mas, devido a diversas reformas e à instalação de camarotes, sua capacidade foi reduzida para 72 039. O Morumbi é o terceiro maior estádio do Brasil, sendo também o maior estádio do estado de São Paulo e o maior estádio particular do País. Localiza-se na Praça Roberto Gomes Pedrosa, n.º 1, em São Paulo.[6] Projetado pelo arquiteto João Batista Vilanova Artigas, é considerado um patrimônio arquitetônico representativo da Escola Paulista, tendo sido tombado em 2018 pelo Conselho Municipal de Preservação do Patrimônio Histórico, Cultural e Ambiental da Cidade de São Paulo. <a href="Quem-somos-nós.html"><b>Ver mais</b></a> </p> 
                 </div>
                 <img src="assets/mapa-atualizado-setores-do-morumbi-2022.png    " alt="">
             </div>
@@ -125,12 +119,6 @@
                 <h4>Feito com amor por um aluno &hearts; SPTech &copy; 2022</h4>
             </div>
         </div>
-
-
-
-
-
-
 
 </body>
 
