--- a/web-data-viz/site/public/Quem-somos-nós.html
+++ b/web-data-viz/site/public/Quem-somos-nós.html
@@ -37,8 +37,13 @@
     <div>
         <div class="banner">
             <div class="container">
-                <p> </p>
+
             </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="container">
+            <h4>Feito com amor por um aluno &hearts; SPTech &copy; 2022</h4>
         </div>
     </div>
 </body>
