Referenciando botoes e iniciando dashboard

--- a/web-data-viz/site/public/login.html
+++ b/web-data-viz/site/public/login.html
@@ -53,7 +53,7 @@
                     <input id="email_input" type="text" placeholder="Login">
                     <div class="tipo_campo">Senha:</div>
                     <input id="senha_input" type="password" placeholder="******">
-                    <button class="btn" onclick="entrar()">Entrar</button>
+                    <a href="dashboard.html"><button class="btn" onclick="entrar()">Entrar</button></a>
 
                     </div>
             </div>
