--- a/web-data-viz/site/public/cadastro.html
+++ b/web-data-viz/site/public/cadastro.html
@@ -52,24 +52,24 @@
                 <h2>Bem-vindo!</h2>
                 <div class="cadastro">
 
-                        <!--
+                    <!--
                             Para inserir mais um campo, copie uma das inputs abaixo.
                             Assim que inserir vá para o script abaixo.
                         -->
 
-                        <div class="tipo_campo">Nome:</div>
-                        <input id="nome_input" type="text" placeholder="Seu nome">
+                    <div class="tipo_campo">Nome:</div>
+                    <input id="nome_input" type="text" placeholder="Seu nome">
 
-                        <div class="tipo_campo">E-mail:</div>
-                        <input id="email_input" type="text" placeholder="meuemail@provedor.com">
+                    <div class="tipo_campo">E-mail:</div>
+                    <input id="email_input" type="text" placeholder="meuemail@provedor.com">
 
-                        <div class="tipo_campo">Senha:</div>
-                        <input id="senha_input" type="password" placeholder="******">
+                    <div class="tipo_campo">Senha:</div>
+                    <input id="senha_input" type="password" placeholder="******">
 
-                        <div class="tipo_campo">Confirmação da Senha:</div>
-                        <input id="confirmacao_senha_input" type="password" placeholder="******">
+                    <div class="tipo_campo">Confirmação da Senha:</div>
+                    <input id="confirmacao_senha_input" type="password" placeholder="******">
 
-                        <button class="btn" onclick="cadastrar()">Cadastrar</button>
+                  <a href="login.html"> <button class="btn" onclick="cadastrar()">Cadastrar</button></a>
 
                 </div>
             </div>
@@ -100,21 +100,24 @@
 
         //Recupere o valor da nova input pelo nome do id
         // Agora vá para o método fetch logo abaixo
-        var nomeVar = nome_input.value;
-        var emailVar = email_input.value;
-        var senhaVar = senha_input.value;
-        var confirmacaoSenhaVar = confirmacao_senha_input.value;
+        var usuarioVar = iptusuario.value;
+        var emailVar = iptemail.value;
+        var senhaVar = iptsenha.value;
+        var confirmacaoSenhaVar = iptconfirmacao.value;
+        var fkmapaVar = iptmpfavorito.value;
 
-        if (nomeVar == "" || emailVar == "" || senhaVar == "" || confirmacaoSenhaVar == "") {
-            cardErro.style.display = "block"
-            mensagem_erro.innerHTML = "(Mensagem de erro para todos os campos em branco)";
+        if (usuarioVar == "" || emailVar == "" || senhaVar == "" || confirmacaoSenhaVar == "" || fkmapaVar == "") {
+            alert("Por favor preencha todos os campos!")
 
             finalizarAguardar();
             return false;
         }
-        else {
-            setInterval(sumirMensagem, 5000)
+        if (emailVar.indexOf("@") == -1 || emailVar.indexOf(".com") == -1) {
+            window.alert("Ops, e-mail inválido! Verifique e tente novamente.");
+            finalizarAguardar();
+            return false;
         }
+
 
         // Enviando o valor da nova input
         fetch("/usuarios/cadastrar", {
@@ -125,38 +128,33 @@
             body: JSON.stringify({
                 // crie um atributo que recebe o valor recuperado aqui
                 // Agora vá para o arquivo routes/usuario.js
-                nomeServer: nomeVar,
+                usuarioServer: usuarioVar,
                 emailServer: emailVar,
-                senhaServer: senhaVar
+                senhaServer: senhaVar,
+                fkmapaServer: fkmapaVar
             })
         }).then(function (resposta) {
 
             console.log("resposta: ", resposta);
 
             if (resposta.ok) {
-                cardErro.style.display = "block";
 
-                mensagem_erro.innerHTML = "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
+                alert("Cadastro realizado com sucesso! Redirecionando para tela de Login...");
 
                 setTimeout(() => {
                     window.location = "login.html";
                 }, "2000")
 
                 limparFormulario();
-                finalizarAguardar();
             } else {
                 throw ("Houve um erro ao tentar realizar o cadastro!");
             }
         }).catch(function (resposta) {
-            console.log(`#ERRO: ${resposta}`);
-            finalizarAguardar();
+            // console.log(`#ERRO: ${resposta}`);
+
         });
 
         return false;
-    }
-
-    function sumirMensagem() {
-        cardErro.style.display = "none"
     }
 
 </script>
