Finalizando carrosel e começando historia do clube e dos idolos

--- a/web-data-viz/site/public/Index.html
+++ b/web-data-viz/site/public/Index.html
@@ -46,7 +46,7 @@
                         conquistar o Campeonato Brasileiro três vezes consecutivas. Duas das estrelas do emblema
                         são-paulino, as douradas, têm relação com outro esporte. Elas representam os recordes mundiais e
                         olímpicos de salto triplo de Adhemar Ferreira da Silva, atleta do clube. <a
-                            href="Quem-somos-nós.html"><b>Ver mais</b></a>
+                            href="Quem-somos-nós.html#historia"><b>Ver mais</b></a>
                 </div>
                 <img src="assets/Estadio-Antigo.png">
             </div>
@@ -75,7 +75,7 @@
                             <p>Revelado em 1990 pelo Sinop, do Mato Grosso, foi contratado no mesmo ano pelo São Paulo,
                                 equipe da qual foi titular de 1997 até 2015 e é considerado o maior e melhor jogador da
                                 história do clube, por ter conquistado praticamente todos os títulos possíveis, sendo em
-                                muitos deles decisivo. <a href="Quem-somos-nós.html"><b>Ver mais</b></a> </p>
+                                muitos deles decisivo. <a href="Quem-somos-nós.html#idolos "><b>Ver mais</b></a> </p>
                         </div>
                         <div class="box">
                             <img src="assets/rai-01.jpg" alt="Rai">
@@ -87,7 +87,7 @@
                                 <option value="">1992 Mundial Interclubes</option>
                                 <option value="">1993 Copa Libertadores da América</option>
                             </select>
-                            <p>Raí chegou ao São Paulo em 1987 e teve um começo instável: era chamado de lento e frequentemente ficava no banco de reservas. Só virou titular absoluto em 1989, ano da primeira conquista pelo clube, o Campeonato Paulista. Telê chegou no ano seguinte. <a href="Quem-somos-nós.html"><b>Ver mais</b></a> </p>        
+                            <p>Raí chegou ao São Paulo em 1987 e teve um começo instável: era chamado de lento e frequentemente ficava no banco de reservas. Só virou titular absoluto em 1989, ano da primeira conquista pelo clube, o Campeonato Paulista. Telê chegou no ano seguinte. <a href="Quem-somos-nós.html#idolos"><b>Ver mais</b></a> </p>        
                         </div>
                         <div class="box">
                             <img src="assets/serginho-chulapa.jpg" alt="Serginho Chulapa">
@@ -99,7 +99,7 @@
                                 <option value="">1980 Campeonato Paulista</option>
                                 <option value="">1981 Campeonato Paulista</option>
                             </select>
-                            <p> Serginho Chulapa foi um dos principais atacantes da década de 1970 e 1980 do futebol brasileiro. Com 1,94m de altura, o jogador sempre chamou a atenção pelo seu estilo de jogo, do centroavante clássico, com muita presença de área e faro de gols. <a href="Quem-somos-nós.html"><b>Ver mais</b></a> </p>  
+                            <p> Serginho Chulapa foi um dos principais atacantes da década de 1970 e 1980 do futebol brasileiro. Com 1,94m de altura, o jogador sempre chamou a atenção pelo seu estilo de jogo, do centroavante clássico, com muita presença de área e faro de gols. <a href="Quem-somos-nós.html#idolos"><b>Ver mais</b></a> </p>  
                         </div>
                     </div>
                 </div>
