--- a/web-data-viz/site/public/cadastro.html
+++ b/web-data-viz/site/public/cadastro.html
@@ -31,7 +31,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./Quem-somos-nós.html">Quem somos nós</a>
+                    <a href="./Quem-somos-nós.html">Historia</a>
                 </li>
                 <li>|</li>
                 <li>
