--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./Quem-somos-nós.html">Historia</a>
+                    <a href="./historia.html">Historia</a>
                 </li>
                 <li>|</li>
                 <li>
